[project]
name = "adbms-gis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.28.0",
    "pymongo>=4.6.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.15.0",
    "pandas>=2.0.0",
    "geopy>=2.4.0",
    "plotly>=5.17.0",
    "shapely>=2.0.0",
    "geopandas>=0.14.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "branca>=0.6.0",
    "requests>=2.31.0"
]
